birimlere ait personelleri listeleme

--- a/ASPNETCoreProject/Views/Birim/Index.cshtml
+++ b/ASPNETCoreProject/Views/Birim/Index.cshtml
@@ -21,7 +21,7 @@
                 <td>@x.BirimAd</td>
                 <td><a href="/Birim/BirimSil/@x.BirimID" class="btn btn-danger">Sil</a></td>
                 <td><a href="/Birim/BirimGuncelle/@x.BirimID" class="btn btn-success">Güncelle</a></td>
-                <td><a href="#" class="btn btn-secondary">Detay</a></td>
+                <td><a href="/Birim/BirimDetay/@x.BirimID" class="btn btn-secondary">Detay</a></td>
             </tr>
         }
     </table>
