Birim detay sayfasında birim adını getirme

--- a/ASPNETCoreProject/Views/Birim/BirimDetay.cshtml
+++ b/ASPNETCoreProject/Views/Birim/BirimDetay.cshtml
@@ -6,6 +6,8 @@
 }
 
 <div class="container my-4">
+    <h2>@ViewBag.birimAdi Departmanı</h2>
+    <br />
     <table class="table table-hover">
         <tr>
             <th>ID</th>
