giriş-çıkış işlemleri yapıldı, autorization işlemi yapıldı

--- a/ASPNETCoreProject/Views/Shared/_TestLayout.cshtml
+++ b/ASPNETCoreProject/Views/Shared/_TestLayout.cshtml
@@ -17,7 +17,7 @@
         <a href="/Birim/Index/" class="w3-bar-item w3-button">Birimler</a>
         <a href="/Personel/Index/" class="w3-bar-item w3-button">Personeller</a>
         <a href="#" class="w3-bar-item w3-button">Hakkımızda</a>
-        <a href="#" class="w3-bar-item w3-button">Çıkış</a>
+        <a href="/Login/CikisYap/" class="w3-bar-item w3-button">Çıkış</a>
     </div>
 
     <!-- Page Content -->
