--- a/ASPNETCoreProject/Views/Personel/PersonelGuncelle.cshtml
+++ b/ASPNETCoreProject/Views/Personel/PersonelGuncelle.cshtml
@@ -5,21 +5,25 @@
 }
 
 
-@using (Html.BeginForm("PersonelGuncelle", "Personel", FormMethod.Post))
-{
+<form class="form-group" action="PersonelGuncelle" controller="Personel" method="post" enctype="multipart/form-data">
+
     <b>Personel ID</b>
     @Html.TextBoxFor(x=>x.PersonelID,new{@class="form-control",@disabled = "true" })
     <b>Personel Adı</b>
     @Html.TextBoxFor(x=>x.Ad,new{@class="form-control"})
     <br />
-    <b>Personel Adı</b>
+    <b>Personel Soyadı</b>
     @Html.TextBoxFor(x=>x.Soyad,new{@class="form-control"})
     <br />
-    <b>Personel Adı</b>
+    <b>Personelin Şehri</b>
     @Html.TextBoxFor(x=>x.Sehir,new{@class="form-control"})
     <br />
-    <b>Birim</b>
+    <b>Birimi</b>
     @Html.DropDownListFor(x=>x.Birim.BirimID,(List<SelectListItem>)ViewBag.birims, new{@class="form-control"})
     <br />
-    <button class="btn btn-info">Personel Güncelle</button>
-}
+    <b>Personel Görsel</b>
+    <input type="file" name="Gorsel" />
+    <br />
+    <br />
+    <button type="submit" class="btn btn-info">Personel Güncelle</button>
+</form>
