--- a/ASPNETCoreProject/Views/Personel/Index.cshtml
+++ b/ASPNETCoreProject/Views/Personel/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="container my-4">
     <table class="table table-hover">
         <tr>
-            <th>ID</th>
+            <th hidden>ID</th>
             <th>Ad</th>
             <th>Soyad</th>
             <th>Şehir</th>
@@ -19,7 +19,7 @@
         @foreach (var x in Model)
         {
             <tr>
-                <td>@x.PersonelID</td>
+                <td hidden>@x.PersonelID</td>
                 <td>@x.Ad</td>
                 <td>@x.Soyad</td>
                 <td>@x.Sehir</td>
